--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@bcrs-shared-components/corp-type-module": "^1.0.16",
     "@bcrs-shared-components/enums": "1.1.21",
     "@bcrs-shared-components/interfaces": "^1.1.16",
+    "@bcrs-shared-components/services": "1.1.0",
     "@headlessui/vue": "^1.7.22",
     "@iconify/json": "^2.2.214",
     "@mdi/font": "^7.4.47",
